--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     }
     (window.onload = func) && (window.onresize = func) && func();
   </script>
+
   <body>
+      <script>
+          var _hmt = _hmt || [];
+          (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?9ff35410ff4a280abdeb0fa13671db29";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+          })();
+        </script>
     <div id="app"></div>
+
+
   </body>
 </html>
